# openai-chat-component

./: .gitignore  Cargo.toml  README.md  edgee-component.toml
.github/workflows/: check.yml  wasm-build-release.yml
src/: helpers.rs  lib.rs  openai_payload.rs
