[package]
name = "openai-chat-component"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
waki = "0.5.1"
wit-bindgen = "0.43.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
uuid = { version = "1.17.0", features = ["v4"] }
